--- a/doc/DokumenSkripsi/Bab/bab3.tex
+++ b/doc/DokumenSkripsi/Bab/bab3.tex
@@ -232,7 +232,14 @@ pilihan ``Seluruh Tahun Akademik'' untuk melihat seluruh nilai berdasarkan semes
 
 \section{Analisis Kebutuhan Informatika Student Portal}
 \label{sec:kebutuhan}
-Dalam menganalisis kebutuhan Informatika Student Portal, penulis melakukan wawancara dengan mahasiswa Program Studi Teknik Informatika UNPAR. Sampel yang diambil adalah lima orang mahasiswa dari setiap angkatan dalam empat tahun terakhir yaitu angkatan 2012 sampai 2015. Setelah melakukan wawancara, penulis memperoleh fitur-fitur yang diinginkan mahasiswa antara lain:
+Dalam menganalisis kebutuhan Informatika Student Portal, peneliti melakukan wawancara dengan mahasiswa Program Studi Teknik Informatika UNPAR. Sampel yang diambil adalah lima orang mahasiswa dari setiap angkatan dalam empat tahun terakhir yaitu angkatan 2012 sampai 2015 dengan rincian sebagai berikut:
+\begin{itemize}
+	\item Angkatan 2012: tiga orang laki-laki dan dua orang perempuan
+	\item Angkatan 2013: tiga orang laki-laki dan dua orang perempuan
+	\item Angkatan 2014: tiga orang laki-laki dan dua orang perempuan
+	\item Angkatan 2015: tiga orang laki-laki dan dua orang perempuan
+\end{itemize}
+ Setelah melakukan wawancara, peneliti memperoleh fitur-fitur yang diinginkan mahasiswa antara lain:
 \begin{enumerate}
 	\item Prasyarat mata kuliah\\
 	Mahasiswa bisa memeriksa prasyarat mata kuliah saat FRS sehingga tidak terjadi kesalahan pengambilan mata kuliah. Prasyarat mata kuliah yang ditampilkan di Portal Akademik Mahasiswa kurang akurat. Selain itu, dari 20 mahasiswa yang diwawancara, hanya ada satu mahasiswa yang mengetahui bahwa Portal Akademik Mahasiswa memiliki fitur prasyarat. Prasyarat mata kuliah untuk Program Studi Teknik Informatika juga tersedia di \url{http://tinyurl.com/lionov}\footnote{\url{http://tinyurl.com/lionov}, diakses 5 September 2015}, namun mahasiswa merasa kurang praktis karena harus memeriksa secara manual. Mahasiswa menginginkan agar fitur ini bisa dibuat untuk mempermudah FRS. Fitur ini akan menampilkan seluruh mata kuliah yang dibuka pada semester terkini beserta status pengambilannya.
@@ -280,7 +287,7 @@ Dalam menganalisis kebutuhan Informatika Student Portal, penulis melakukan wawan
 	Mahasiswa menginginkan agar dapat mengunggah data mengenai kegiatan dan keaktifan di universitas agar dapat digunakan oleh perusahaan untuk mencari mahasiswa dengan kriteria tertentu misalnya untuk kepentingan magang dan beasiswa.
 \end{enumerate}
 
-Penulis menetapkan fitur-fitur yang akan dipilih untuk diimplementasikan harus memenuhi kriteria:
+Peneliti menetapkan fitur-fitur yang akan dipilih untuk diimplementasikan harus memenuhi kriteria:
 \begin{itemize}
 	\item Data yang dibutuhkan dapat diambil dari Portal Akademik Mahasiwa \\
 	Aplikasi Informatika Student Portal merupakan aplikasi hasil kustomisasi Portal Akademik Mahasiswa. Informasi yang ditampilkan Informatika Student Portal diperoleh dengan cara mengolah data dari Portal Akademik Mahasiswa. Jadi data yang dibutuhkan Informatika Student Portal harus dapat diambil dari Portal Akademik Mahasiswa. 
