--- a/app/StudentPortal/README
+++ b/app/StudentPortal/README
@@ -1,6 +1,6 @@
 
-==========================
-Informatika Student Portal
-==========================
+▬▬▬▬▬▬▬▬▬▬▬▬▬۞۞۞۞▬▬▬▬▬▬▬▬▬▬▬▬▬
+  INFORMATIKA STUDENT PORTAL
+▬▬▬▬▬▬▬▬▬▬▬▬▬۞۞۞۞▬▬▬▬▬▬▬▬▬▬▬▬▬
 
 Informatika Student Portal project directory.
