Update program interface

--- a/doc/DokumenSkripsi/Bab/bab1.tex
+++ b/doc/DokumenSkripsi/Bab/bab1.tex
@@ -52,6 +52,7 @@ Tujuan-tujuan yang hendak dicapai pada skripsi ini adalah sebagai berikut:
 
 Beberapa batasan yang dibuat terkait dengan pengerjaan skripsi ini adalah sebagai berikut:
 \begin{enumerate}
+	\item Aplikasi akan diuji pada server FTIS sehingga tidak bisa diakses dari luar jaringan FTIS.
 	\item Prasyarat mata kuliah yang tersedia hanya mata kuliah yang didukung SIA Models.
 \end{enumerate}
 
