Minor edit document

--- a/doc/DokumenSkripsi/Bab/bab2.tex
+++ b/doc/DokumenSkripsi/Bab/bab2.tex
@@ -4,7 +4,7 @@
 \section{jsoup}
 \label{sec:jsoup}
 
-\textit{Web scraping} adalah teknik mendapatkan informasi dari sebuah situs web secara otomatis\cite{Vargiu:2013}. Dalam bahasa Java, \textit{web scraping} dapat diimplementasikan menggunakan \textit{library} jsoup\cite{jsoup}. API yang disediakan oleh jsoup dapat digunakan untuk mengekstrak dan memanipulasi data HTML. 
+\textit{Web scraping} adalah teknik mendapatkan informasi dari sebuah situs web secara otomatis\cite{Vargiu:2013}. Dalam bahasa Java, \textit{web scraping} dapat diimplementasikan menggunakan \textit{library} jsoup\cite{jsoup}. jsoup dapat mengambil data berupa HTML dari sebuah situs web. Dalam mengambil HTML, jsoup dapat menggunakan CSS \textit{selector} untuk memilih elemen mana saja yang ingin diambil. 
 
 Subbab-subbab berikut menjelaskan beberapa kelas dari jsoup.
 
