--- a/doc/DokumenSkripsi/Bab/bab5.tex
+++ b/doc/DokumenSkripsi/Bab/bab5.tex
@@ -8,7 +8,7 @@
 		\label{sec:lingkungan_implementasi}
 			Implementasi perangkat lunak ini dilakukan di dua buah komputer. Implementasi pertama dilakukan pada komputer peneliti untuk keperluan pengujian fungsional. Komputer tersebut memiliki spesifikasi sebagai berikut:
 				\begin{enumerate}
-					\item Processor: 2.40Ghz 
+					\item Processor: 3.20Ghz 
 					\item RAM: 4.00 GB DDR3	
 					\item Sistem Operasi: Windows 8.1 Pro 64-bit 
 					\item Versi Java: 1.8.0\_40
@@ -18,7 +18,7 @@
 					\item Processor: 2.40Ghz 
 					\item RAM: 4.00 GB DDR3	
 					\item Sistem Operasi: Ubuntu server amd-64 
-					\item Versi Java: 1.7.0\_40
+					\item Versi Java: 1.8.0\_85
 				\end{enumerate}
 
 \subsection{Hasil Implementasi}
@@ -48,3 +48,6 @@
 				\end{tabular}
 				\label{table:hasilFungsional}
 			\end{table}
+			
+		\subsection{Pengujian Eksperimental} 
+		
