--- a/doc/DokumenSkripsi/Bab/bab3.tex
+++ b/doc/DokumenSkripsi/Bab/bab3.tex
@@ -236,8 +236,8 @@ Dalam menganalisis kebutuhan Informatika Student Portal, peneliti melakukan wawa
 \begin{itemize}
 	\item Angkatan 2012: tiga orang laki-laki dan dua orang perempuan
 	\item Angkatan 2013: tiga orang laki-laki dan dua orang perempuan
-	\item Angkatan 2014: tiga orang laki-laki dan dua orang perempuan
-	\item Angkatan 2015: tiga orang laki-laki dan dua orang perempuan
+	\item Angkatan 2014: lima orang laki-laki 
+	\item Angkatan 2015: tiga orang laki-laki dan satu orang perempuan
 \end{itemize}
  Setelah melakukan wawancara, peneliti memperoleh fitur-fitur yang diinginkan mahasiswa antara lain:
 \begin{enumerate}
