--- a/doc/DokumenSkripsi/Bab/bab5.tex
+++ b/doc/DokumenSkripsi/Bab/bab5.tex
@@ -22,6 +22,58 @@
 				\end{enumerate}
 
 \subsection{Hasil Implementasi}
+				Hasil implementasi berupa aplikasi berbasis web terdiri dari lima halaman. 
+				\textbf{Halaman \textit{Login}}\\
+				Halaman \textit{login} digunakan pengguna untuk masuk ke dalam aplikasi. Pada halaman ini, pengguna dapat melakukan \textit{login} dengan mengisi \textit{email} pada kolom \textit{email} dan \textit{password} pada kolom \textit{password} kemudian mengklik tombol login. Tangkapan layar dari halaman \textit{login} dapat dilihat pada gambar \ref{fig:5_hasil_login}.
+					\begin{figure}[H]
+						\centering
+						\includegraphics[scale=0.5]{Gambar/hasil_login}
+						\caption{Halaman \textit{Login}} 
+						\label{fig:5_hasil_login}
+					\end{figure}
+					
+				\textbf{Halaman Utama}\\
+				Halaman utama merupakan halaman yang pertama kali dituju setelah melakukan \textit{login}. Halaman utama menampilkan identitas pengguna dan \textit{link} menuju kode sumber aplikasi Informatika Student Portal. Pada halaman ini juga terdapat \textit{sidebar menu} yang diperoleh dari template StartBootstrap. Template tersebut juga digunakan pada halaman prasyarat mata kuliah, jadwal kuliah, dan data akademik. Tangkapan layar dari halaman utama dapat dilihat pada gambar \ref{fig:5_hasil_utama}.
+					\begin{figure}[H]
+						\centering
+						\includegraphics[scale=0.5]{Gambar/hasil_home}
+						\caption{Halaman Utama} 
+						\label{fig:5_hasil_utama}
+					\end{figure}
+						
+				\textbf{Halaman Prasyarat Mata Kuliah}\\
+				Halaman ini menampilkan tabel prasyarat mata kuliah. Jika prasyarat mata kuliah tersedia, pengguna dapat mengklik kode mata kuliah, kemudian akan diarahkan ke kode sumber aturan prasyarat mata kuliah tersebut. Tangkapan layar dari halaman prasyarat mata kuliah dapat dilihat pada gambar \ref{fig:5_hasil_prasyarat}.
+					\begin{figure}[H]
+						\centering
+						\includegraphics[scale=0.5]{Gambar/hasil_prasyarat}
+						\caption{Halaman Prasyarat Mata Kuliah} 
+						\label{fig:5_hasil_prasyarat}
+					\end{figure}
+
+				\textbf{Halaman Jadwal Kuliah}\\
+				Halaman ini menampilkan jadwal kuliah yang tersusun dan terurut berdasarkan hari. Tangkapan layar dari halaman jadwal kuliah dapat dilihat pada gambar \ref{fig:5_hasil_jadwal}. Jika kode mata kuliah diklik, akan muncul \textit{popup} seperti pada gambar \ref{fig:5_hasil_rinci} yang berisi rincian dari jadwal kuliah tersebut.
+				\begin{figure}[H]
+						\centering
+						\includegraphics[scale=0.5]{Gambar/hasil_jadwal}
+						\caption{Halaman Jadwal Kuliah} 
+						\label{fig:5_hasil_jadwal}
+					\end{figure}
+					
+					\begin{figure}[H]
+						\centering
+						\includegraphics[scale=0.5]{Gambar/hasil_jadwal_popup}
+						\caption{Rincian Jadwal Kuliah} 
+						\label{fig:5_hasil_jadwal_rinci}
+					\end{figure}
+					
+				\textbf{Halaman Data Akademik}\\
+				Halaman ini menampilkan data akademik berupa IPS dan IPK yang langsung berubah ketika nilai sudah muncul, sisa SKS, dan status kelulusan mata kuliah pilihan wajib. Tangkapan layar dari halaman data akademik dapat dilihat pada gambar \ref{fig:5_hasil_ringkasan}.
+				\begin{figure}[H]
+						\centering
+						\includegraphics[scale=0.5]{Gambar/hasil_ringkasan}
+						\caption{Halaman Data Akademik} 
+						\label{fig:5_hasil_ringkasan}
+					\end{figure}
 				
 \section{Pengujian}
 			\subsection{Pengujian Fungsional} 
@@ -50,4 +102,4 @@
 			\end{table}
 			
 		\subsection{Pengujian Eksperimental} 
-		
+		Pengujian eksperimental dilakukan oleh mahasiswa angkatan 2012 sampai 2015.
