Revisi bab 5 dan 6

--- a/doc/DokumenSkripsi/Bab/bab3.tex
+++ b/doc/DokumenSkripsi/Bab/bab3.tex
@@ -384,6 +384,7 @@ Di Portal Akademik Mahasiswa, mahasiswa dapat \textit{login} dengan cara:
 	\item PHPSESSID: diambil dari \textit{cookie} yang di-\textit{set} pada beberapa pengalihan sebelumnya
 	\item \_ga dan \_gat: tidak diperlukan, digunakan oleh Google Analytics\footnote{\url{https://developers.google.com/analytics/devguides/collection/analyticsjs/cookie-usage}}
 \end{itemize}
+\item Pada halaman utama, mahasiswa dapat melihat foto profil pada ``div.student-photo img''.
 \end{enumerate}
 
 \subsection{Kasus Nilai}
