--- a/doc/DokumenSkripsi/Bab/bab5.tex
+++ b/doc/DokumenSkripsi/Bab/bab5.tex
@@ -22,70 +22,72 @@
 				\end{enumerate}
 
 \subsection{Hasil Implementasi}
-				Hasil implementasi berupa aplikasi berbasis web terdiri dari lima halaman. 
-				\textbf{Halaman \textit{Login}}\\
+				Hasil implementasi berupa aplikasi berbasis web responsif yang menggunakan \textit{framework} Bootstrap\footnote{\url{http://getbootstrap.com/}, diakses 20 November 2015}. Aplikasi dapat diakses pada jaringan FTIS dengan URL \url{http://studentportal-if.ftis.unpar:9000}. Aplikasi Informatika Student Portal terdiri dari lima halaman antara lain:
+			\begin{enumerate}	 
+				\item\textbf{Halaman \textit{Login}}\\
 				Halaman \textit{login} digunakan pengguna untuk masuk ke dalam aplikasi. Pada halaman ini, pengguna dapat melakukan \textit{login} dengan mengisi \textit{email} pada kolom \textit{email} dan \textit{password} pada kolom \textit{password} kemudian mengklik tombol login. Tangkapan layar dari halaman \textit{login} dapat dilihat pada gambar \ref{fig:5_hasil_login}.
 					\begin{figure}[H]
 						\centering
-						\includegraphics[scale=0.5]{Gambar/hasil_login}
+						\includegraphics[scale=0.34]{Gambar/hasil_login}
 						\caption{Halaman \textit{Login}} 
 						\label{fig:5_hasil_login}
 					\end{figure}
 					
-				\textbf{Halaman Utama}\\
-				Halaman utama merupakan halaman yang pertama kali dituju setelah melakukan \textit{login}. Halaman utama menampilkan identitas pengguna dan \textit{link} menuju kode sumber aplikasi Informatika Student Portal. Pada halaman ini juga terdapat \textit{sidebar menu} yang diperoleh dari template StartBootstrap. Template tersebut juga digunakan pada halaman prasyarat mata kuliah, jadwal kuliah, dan data akademik. Tangkapan layar dari halaman utama dapat dilihat pada gambar \ref{fig:5_hasil_utama}.
+				\item\textbf{Halaman Utama}\\
+				Halaman utama merupakan halaman yang pertama kali dituju setelah melakukan \textit{login}. Halaman utama menampilkan identitas pengguna dan \textit{link} menuju kode sumber aplikasi Informatika Student Portal. Pada halaman ini juga terdapat \textit{sidebar menu} yang diperoleh dari \textit{template} StartBootstrap\footnote{\url{http://startbootstrap.com/}, diakses 20 November 2015}. \textit{Template} tersebut juga digunakan pada halaman prasyarat mata kuliah, jadwal kuliah, dan data akademik. Tangkapan layar dari halaman utama dapat dilihat pada gambar \ref{fig:5_hasil_utama}.
 					\begin{figure}[H]
 						\centering
-						\includegraphics[scale=0.5]{Gambar/hasil_home}
+						\includegraphics[scale=0.34]{Gambar/hasil_home}
 						\caption{Halaman Utama} 
 						\label{fig:5_hasil_utama}
 					\end{figure}
 						
-				\textbf{Halaman Prasyarat Mata Kuliah}\\
+				\item\textbf{Halaman Prasyarat Mata Kuliah}\\
 				Halaman ini menampilkan tabel prasyarat mata kuliah. Jika prasyarat mata kuliah tersedia, pengguna dapat mengklik kode mata kuliah, kemudian akan diarahkan ke kode sumber aturan prasyarat mata kuliah tersebut. Tangkapan layar dari halaman prasyarat mata kuliah dapat dilihat pada gambar \ref{fig:5_hasil_prasyarat}.
 					\begin{figure}[H]
 						\centering
-						\includegraphics[scale=0.5]{Gambar/hasil_prasyarat}
+						\includegraphics[scale=0.34]{Gambar/hasil_prasyarat}
 						\caption{Halaman Prasyarat Mata Kuliah} 
 						\label{fig:5_hasil_prasyarat}
 					\end{figure}
 
-				\textbf{Halaman Jadwal Kuliah}\\
-				Halaman ini menampilkan jadwal kuliah yang tersusun dan terurut berdasarkan hari. Tangkapan layar dari halaman jadwal kuliah dapat dilihat pada gambar \ref{fig:5_hasil_jadwal}. Jika kode mata kuliah diklik, akan muncul \textit{popup} seperti pada gambar \ref{fig:5_hasil_rinci} yang berisi rincian dari jadwal kuliah tersebut.
+				\item\textbf{Halaman Jadwal Kuliah}\\
+				Halaman ini menampilkan jadwal kuliah yang tersusun dan terurut berdasarkan hari. Tangkapan layar dari halaman jadwal kuliah dapat dilihat pada gambar \ref{fig:5_hasil_jadwal}. Jika kode mata kuliah diklik, akan muncul \textit{popup} seperti pada gambar \ref{fig:5_hasil_jadwal_rinci} yang berisi rincian dari jadwal kuliah tersebut.
 				\begin{figure}[H]
 						\centering
-						\includegraphics[scale=0.5]{Gambar/hasil_jadwal}
+						\includegraphics[scale=0.34]{Gambar/hasil_jadwal}
 						\caption{Halaman Jadwal Kuliah} 
 						\label{fig:5_hasil_jadwal}
 					\end{figure}
 					
 					\begin{figure}[H]
 						\centering
-						\includegraphics[scale=0.5]{Gambar/hasil_jadwal_popup}
+						\includegraphics[scale=0.34]{Gambar/hasil_jadwal_popup}
 						\caption{Rincian Jadwal Kuliah} 
 						\label{fig:5_hasil_jadwal_rinci}
 					\end{figure}
 					
-				\textbf{Halaman Data Akademik}\\
+				\item\textbf{Halaman Data Akademik}\\
 				Halaman ini menampilkan data akademik berupa IPS dan IPK yang langsung berubah ketika nilai sudah muncul, sisa SKS, dan status kelulusan mata kuliah pilihan wajib. Tangkapan layar dari halaman data akademik dapat dilihat pada gambar \ref{fig:5_hasil_ringkasan}.
 				\begin{figure}[H]
 						\centering
-						\includegraphics[scale=0.5]{Gambar/hasil_ringkasan}
+						\includegraphics[scale=0.34]{Gambar/hasil_ringkasan}
 						\caption{Halaman Data Akademik} 
 						\label{fig:5_hasil_ringkasan}
 					\end{figure}
+			\end{enumerate}
 				
 \section{Pengujian}
 			\subsection{Pengujian Fungsional} 
-			Pengujian fungsional dilakukan untuk mengetahui kesesuaian reaksi perangkat lunak dengan reaksi yang diharapkan berdasarkan aksi pengguna terhadap perangkat lunak. Ada delapan tes kasus yang diujikan, dan detail serta hasilnya dapat dilihat di tabel \ref{table:hasilFungsional}.
+			Pengujian fungsional dilakukan untuk mengetahui kesesuaian reaksi perangkat lunak dengan reaksi yang diharapkan berdasarkan aksi pengguna terhadap perangkat lunak. Pengujian ini dilakukan pada berbagai sistem yaitu Windows, Linux, MacOS, dan Android. Terdapat tujuh tes kasus yang diujikan, detail serta hasilnya dapat dilihat di tabel \ref{table:hasilFungsional}.
 			
 			\begin{table}[H]
 			\centering
 			\caption{Tabel Pengujian Fungsional}
-				\begin{tabular}{|p{0.5cm}| p{3.5cm}| p{7cm}| p{2.25cm}|} \hline
+				\begin{tabular}{|p{0.25cm}| p{3.5cm}| p{7cm}| p{2.5cm}|} \hline
 				No.	&	Aksi Pengguna	&	Reaksi yang diharapkan	&	Reaksi Perangkat Lunak \\ \hline
 				1.	&	Pengguna menjalankan aplikasi	&	Halaman \textit{login} akan ditampilkan	&	sesuai	\\ \hline
-				2.	&	Pengguna memasukkan \textit{email} dan \textit{password}	&	Jika \textit{email} dan \textit{password}	sesuai, pengguna akan diarahkan ke halaman utama. & sesuai, namun foto profil tidak muncul jika belum validasi sertifikat SSL UNPAR\\ \hline
+				2.	&	Pengguna memasukkan \textit{email} dan \textit{password}	&	Jika \textit{email} dan \textit{password}	sesuai, pengguna akan diarahkan ke halaman utama. & sesuai, namun foto profil tidak muncul jika belum menambahkan eksepsi terhadap sertifikat SSL UNPAR\\ \hline
 					&	&	Jika \textit{email} yang dimasukkan bukan \textit{email} \textit{student} UNPAR, akan ditampilkan pesan ``Email tidak valid''&	sesuai	\\ \hline
 					&	&	Jika \textit{email} yang dimasukkan bukan \textit{email} mahasiswa teknik informatika, akan ditampilkan pesan ``Maaf, Anda bukan mahasiswa teknik informatika''	&	sesuai	\\ \hline
 					&	&	Jika \textit{email} dan \textit{password} tidak sesuai atau mahasiswa bukan mahasiswa aktif, akan ditampilkan pesan ``Password yang Anda masukkan salah atau Anda bukan mahasiswa aktif''	&	sesuai	\\ \hline
@@ -97,7 +99,6 @@
 					&	&	Jika pengguna sudah memiliki riwayat nilai, akan ditampilkan ringkasan data akademik mahasiswa berupa IPS semester terakhir, IPK, SKS lulus, sisa SKS kelulusan, dan ringkasan data mengenai mata kuliah pilihan wajib &	sesuai	\\ \hline
 				6.	&	Pengguna memilih tombol \textit{logout}	&	Pengguna akan diarahkan kembali ke halaman \textit{login} &	sesuai	\\ \hline
 				7.	& Dua pengguna menggunakan aplikasi secara bersamaan	&	Pengguna dapat menggunakan aplikasi dengan akun yang sesuai &	sesuai	\\ \hline
-				7.	& Pengguna menggunakan aplikasi pada sistem operasi selain Windows	&	Aplikasi dapat menjalankan fungsi yang sama seperti pada sistem operasi Windows &	sesuai	\\ \hline
 				\end{tabular}
 				\label{table:hasilFungsional}
 			\end{table}
