Revisi minor, push sisa rekaman

--- a/doc/DokumenSkripsi/Bab/bab1.tex
+++ b/doc/DokumenSkripsi/Bab/bab1.tex
@@ -84,4 +84,10 @@ Sistematika penulisan setiap bab pada skripsi ini adalah sebagai berikut:
   yang digunakan yaitu \textit{library} jsoup, Chrome DevTools, Play Framework, SIA Models, dan CSS \textit{selector}.
   \item Bab Analisis \\
   Bab 3 berisikan analisis yang dilakukan pada skripsi ini, meliputi analisis Portal Akademik Mahasiswa, analisis kebutuhan Informatika Student Portal, analisis komunikasi Portal Akademik Mahasiswa untuk fitur Informatika Student Portal, analisis \textit{use case} meliputi diagram \textsl{use case} dan skenario, serta analisis kelas. 
+	\item Bab Perancangan \\
+  Bab 4 berisikan perancangan aplikasi, meliputi diagram kelas rinci beserta deskripsi kelas dan fungsinya dan perancangan antarmuka aplikasi. 
+	\item Bab Implementasi dan Pengujian \\
+  Bab 5 berisikan implementasi dan pengujian aplikasi, meliputi lingkungan implementasi, hasil implementasi, pengujian fungsional, dan pengujian eksperimental.
+	\item Bab Kesimpulan dan Saran \\
+  Bab 6 berisikan kesimpulan dari hasil pembangunan aplikasi beserta saran untuk pengembangan berikutnya.
 \end{enumerate}
