--- a/doc/DokumenSkripsi/Bab/bab3.tex
+++ b/doc/DokumenSkripsi/Bab/bab3.tex
@@ -235,7 +235,7 @@ pilihan ``Seluruh Tahun Akademik'' untuk melihat seluruh nilai berdasarkan semes
 Dalam menganalisis kebutuhan Informatika Student Portal, peneliti melakukan wawancara dengan mahasiswa Program Studi Teknik Informatika UNPAR. Sampel yang diambil adalah lima orang mahasiswa dari setiap angkatan dalam empat tahun terakhir yaitu angkatan 2012 sampai 2015 dengan rincian sebagai berikut:
 \begin{itemize}
 	\item Angkatan 2012: tiga orang laki-laki dan dua orang perempuan
-	\item Angkatan 2013: tiga orang laki-laki dan dua orang perempuan
+	\item Angkatan 2013: dua orang laki-laki dan tiga orang perempuan
 	\item Angkatan 2014: lima orang laki-laki 
 	\item Angkatan 2015: tiga orang laki-laki dan satu orang perempuan
 \end{itemize}
