--- a/doc/DokumenSkripsi/Bab/bab5.tex
+++ b/doc/DokumenSkripsi/Bab/bab5.tex
@@ -104,10 +104,11 @@
 			\end{table}
 			
 		\subsection{Pengujian Eksperimental} 
-		Pengujian eksperimental dilakukan terhadap mahasiswa angkatan 2012 sampai 2015. Dari setiap angkatan, diambil 3 orang untuk melakukan pengujian. Hasil dari pengujian tersebut sebagai berikut:
+		Pengujian eksperimental dilakukan terhadap mahasiswa angkatan 2012 sampai 2015. Dari setiap angkatan, diambil 3 orang untuk melakukan pengujian. Setiap responden diminta untuk melakukan \textit{login} kemudian melihat data dari setiap halaman pada Portal Akademik Mahasiswa dan memastikan apakah data tersebut sudah sesuai dengan data sebenarnya. Responden menolak jika hasil pegujian diperlihatkan dengan alasan privasi, karena itu hasil pengujian dirangkum sebagai berikut:
 		\begin{itemize}
 			\item Angkatan 2012\\
-			Saat melakukan pemeriksaan prasyarat, terdapat mahasiswa dengan status belum lulus mata kuliah ``AIF101 Pemrograman Berorientasi Objek''. Hal ini disebabkan oleh perubahan kurikulum. Kode mata kuliah Pemrograman Berorientasi Objek yang sudah ditempuh angkatan 2012 adalah AIF 191. ``AIF191 Pemrograman Berorientasi Objek'' merupakan hasil konversi mata kuliah ``Dasar-dasar Pemrograman''. Selain itu, terdapat juga mahasiswa yang pernah cuti studi. Hasil pengujian eksperimental mahasiswa angkatan 2012 sesuai dengan hasil yang diharapkan.
+			Saat melakukan pemeriksaan prasyarat, terdapat mahasiswa dengan status belum lulus mata kuliah ``AIF101 Pemrograman Berorientasi Objek''. Hal ini disebabkan oleh perubahan kurikulum pada tahun 2013. Kode mata kuliah Pemrograman Berorientasi Objek yang sudah ditempuh angkatan 2012 adalah AIF 191. ``AIF191 Pemrograman Berorientasi Objek'' merupakan hasil konversi mata kuliah ``AKS141 Dasar-dasar Pemrograman''\footnote{\url{http://tinyurl.com/lionov}<Kurikulum 2013><ATURAN KONVERSI 
+KURIKULUM 2003/2008 ke KURIKLUM 2013>, diakses 25 November 2015}. Hal tersebut sudah ditangani oleh aturan prasyarat SIA Models sehingga tidak mengakibatkan kesalahan pemeriksaan prasyarat mata kuliah. Selain itu, terdapat juga mahasiswa yang pernah cuti studi. Mahasiswa tersebut memiliki mata kuliah ``XCT001 Cuti Studi'' pada riwayat nilai yang tidak memiliki nilai akhir, namun aplikasi yang dibuat sudah dapat menanganinya dengan cara mengabaikan mata kuliah tanpa nilai akhir. Hasil pengujian eksperimental mahasiswa angkatan 2012 sesuai dengan hasil yang diharapkan.
 			\item Angkatan 2013\\
 			Dalam pengujian terhadap mahasiswa angkatan 2013, terdapat mahasiswa yang pernah melakukan transfer studi. Total SKS lulus dari mahasiswa tersebut tidak sesuai dikarenakan aplikasi hanya menghitung SKS lulus saat dia melakukan perkuliahan di Program Studi Teknik Informatika. Akibatnya, pemeriksaan prasyarat mata kuliah dengan aturan SKS lulus memberikan hasil yang tidak sesuai. Selain itu, IPS, IPK, dan sisa SKS juga memberikan hasil yang tidak sesuai. Hasil pengujian eksperimental mahasiswa angkatan 2013 sesuai dengan hasil yang diharapkan kecuali terhadap mahasiswa yang transfer studi.
 			\item Angkatan 2014\\
