--- a/doc/DokumenSkripsi/Bab/bab6.tex
+++ b/doc/DokumenSkripsi/Bab/bab6.tex
@@ -14,8 +14,8 @@ Dari hasil pembangunan aplikasi Informatika Student Portal, didapatkanlah kesimp
 \label{sec:saran}
 Dari hasil penelitian termasuk kesimpulan yang didapat, berikut adalah beberapa saran untuk pengembangan:
 	\begin{enumerate}
-		\item URL dan tampilan antarmuka dari Portal Akademik Mahasiswa perlu diperhatikan untuk pengembangan aplikasi ini. Jika URL atau tampilan antarmuka berubah, maka cara pengambilan data menggunakan \textit{library} jsoup perlu diubah.
-		\item Pengambilan data menggunakan \textit{library} jsoup memerlukan analisis komunikasi Portal Akademik Mahasiswa. Untuk pengembangan aplikasi ini, perlu diperhatikan lagi komunikasi Portal Akademik Mahasiswa. Jika komunikasi tersebut berubah, cara pengambilan data juga berubah.
-		\item Penelitian ini memanfaatkan SIA Model terutama \textit{package} id.ac.unpar.siamodels.matakuliah yang berisi aturan mengenai prasyarat mata kuliah. Aturan-aturan tersebut dapat berubah suatu saat. Kelas-kelas yang terdapat pada \textit{package} id.ac.unpar.siamodels.matakuliah harus mengikuti aturan yang berlaku sehingga diperlukan perubahan pada kelas-kelas tersebut jika terjadi perubahan peraturan prasyarat mata kuliah.
-		\item Dalam pengembangan berikutnya, perlu diperhatikan data dari mahasiswa yang pernah melakukan transfer studi. Jika memungkinkan, sebaiknya dianalisis langsung dari akun Portal Akademik Mahasiswa milik mahasiswa tersebut agar dapat mengambil data yang sesuai.
+		\item Penelitian ini memanfaatkan SIA Model terutama \textit{package} \texttt{id.ac.unpar.siamodels.matakuliah} yang berisi aturan mengenai prasyarat mata kuliah. Aturan-aturan tersebut dapat berubah suatu saat. Oleh karena itu, sebaiknya SIA Models dipisahkan dari \textit{project} Play sehingga jika terjadi perubahan aturan pada SIA Models, tidak perlu dilakukan perubahan pada \textit{project} yang dapat mengakibatkan . 
+		\item Dalam pengembangan berikutnya, perlu diperhatikan data dari mahasiswa yang pernah melakukan transfer studi. Jika memungkinkan, sebaiknya dianalisis langsung dari akun Portal Akademik Mahasiswa milik mahasiswa tersebut agar dapat mengambil data yang sesuai. Saat ini, aplikasi mengambil data langsung dari halaman riwayat nilai Portal Akademik Mahasiwa. Terdapat halaman lain yang memuat nilai mahasiswa pada Portal Akademik Mahasiswa yaitu halaman Daftar Perkembangan Studi (DPS). Sebaiknya pengambilan nilai dilakukan pada halaman DPS.
+		\item Saat ini, apliaksi berjalan pada port 9000 dan tidak dijalankan secara otomatis saat server mulai berjalan. Sebaiknya aplikasi dapat langsung berjalan saat server mulai berjalan dan aplikasi juga dapat berjalan pada port 80.
+		\item Aplikasi belum dapat menangani \textit{path} yang tidak terdapat pada \textit{routes} sehingga aplikasi akan memberikan pesan error jika memasuki \textit{path} tersebut. Dalam pengembangan berikutnya, path yang tidak ditemukan sebaiknya diarahkan ke halaman ``404 Not Found''.
 	\end{enumerate}
